Fix Tabs out of alignment on Settings page

--- a/my_test_extension/css/settings.css
+++ b/my_test_extension/css/settings.css
@@ -82,6 +82,10 @@ li {
   margin-top: 1em;
 }
 
+li:first-child, li:nth-child(2), li:nth-child(3) {
+    margin-top: 0;
+}
+
 label {
   font-weight: bold;
 }
